loader/pbrt/pbrtParser.py
# Generated from java-escape by ANTLR 4.4
from antlr4 import *
from io import StringIO
package = globals().get("__package__", None)
ischild = len(package)>0 if package is not None else False
if ischild:
    from .pbrtListener import pbrtListener
else:
    from pbrtListener import pbrtListener

class pbrtParser ( Parser ):

    grammarFileName = "java-escape"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    EOF = Token.EOF
    STRING=1
    NUMBER=2
    WS=3
    LINE_COMMENT=4
    ACCELERATOR=5
    ACTIVETRANSFORM=6
    ALL=7
    AREALIGHTSOURCE=8
    ATTRIBUTEBEGIN=9
    ATTRIBUTEEND=10
    CAMERA=11
    CONCATTRANSFORM=12
    COORDINATESYSTEM=13
    COORDSYSTRANSFORM=14
    ENDTIME=15
    FILM=16
    IDENTITY=17
    INCLUDE=18
    LIGHTSOURCE=19
    LOOKAT=20
    MAKENAMEDMATERIAL=21
    MATERIAL=22
    NAMEDMATERIAL=23
    OBJECTBEGIN=24
    OBJECTEND=25
    OBJECTINSTANCE=26
    PIXELFILTER=27
    RENDERER=28
    REVERSEORIENTATION=29
    ROTATE=30
    SAMPLER=31
    SCALE=32
    SHAPE=33
    STARTTIME=34
    SURFACEINTEGRATOR=35
    TEXTURE=36
    TRANSFORMBEGIN=37
    TRANSFORMEND=38
    TRANSFORMTIMES=39
    TRANSFORM=40
    TRANSLATE=41
    VOLUME=42
    VOLUMEINTEGRATOR=43
    WORLDBEGIN=44
    WORLDEND=45
    PARAMSET_ITEM_LIST_START=46
    PARAMSET_ITEM_LIST_END=47

    tokenNames = [ "<INVALID>", "STRING", "NUMBER", "WS", "LINE_COMMENT", 
                   "'Accelerator'", "'ActiveTransform'", "'All'", "'AreaLightSource'", 
                   "'AttributeBegin'", "'AttributeEnd'", "'Camera'", "'ConcatTransform'", 
                   "'CoordinateSystem'", "'CoordSysTransform'", "'EndTime'", 
                   "'Film'", "'Identity'", "'Include'", "'LightSource'", 
                   "'LookAt'", "'MakeNamedMaterial'", "'Material'", "'NamedMaterial'", 
                   "'ObjectBegin'", "'ObjectEnd'", "'ObjectInstance'", "'PixelFilter'", 
                   "'Renderer'", "'ReverseOrientation'", "'Rotate'", "'Sampler'", 
                   "'Scale'", "'Shape'", "'StartTime'", "'SurfaceIntegrator'", 
                   "'Texture'", "'TransformBegin'", "'TransformEnd'", "'TransformTimes'", 
                   "'Transform'", "'Translate'", "'Volume'", "'VolumeIntegrator'", 
                   "'WorldBegin'", "'WorldEnd'", "'['", "']'" ]

    RULE_vector3 = 0
    RULE_paramSetLeft = 1
    RULE_paramSet = 2
    RULE_film = 3
    RULE_renderer = 4
    RULE_sampler = 5
    RULE_pixelFilter = 6
    RULE_surfaceIntegrator = 7
    RULE_camera = 8
    RULE_lookAt = 9
    RULE_program = 10
    RULE_body = 11
    RULE_worldBlock = 12
    RULE_objectBlock = 13
    RULE_attributeBlock = 14
    RULE_transformBlock = 15
    RULE_transform = 16
    RULE_shape = 17
    RULE_material = 18
    RULE_namedmaterial = 19
    RULE_makenamedmaterial = 20
    RULE_arealightsource = 21
    RULE_rotate = 22
    RULE_lightSource = 23
    RULE_accelerator = 24
    RULE_translate = 25
    RULE_scale = 26
    RULE_areaLightSource = 27
    RULE_texture = 28
    RULE_include = 29
    RULE_objectInstance = 30
    RULE_concattransform = 31

    ruleNames =  [ "vector3", "paramSetLeft", "paramSet", "film", "renderer", 
                   "sampler", "pixelFilter", "surfaceIntegrator", "camera", 
                   "lookAt", "program", "body", "worldBlock", "objectBlock", 
                   "attributeBlock", "transformBlock", "transform", "shape", 
                   "material", "namedmaterial", "makenamedmaterial", "arealightsource", 
                   "rotate", "lightSource", "accelerator", "translate", 
                   "scale", "areaLightSource", "texture", "include", "objectInstance", 
                   "concattransform" ]

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.4")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class Vector3Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(pbrtParser.NUMBER)
            else:
                return self.getToken(pbrtParser.NUMBER, i)

        def getRuleIndex(self):
            return pbrtParser.RULE_vector3

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, pbrtListener ):
                listener.enterVector3(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, pbrtListener ):
                listener.exitVector3(self)




    def vector3(self):

        localctx = pbrtParser.Vector3Context(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_vector3)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(self.NUMBER)
            self.state = 65
            self.match(self.NUMBER)
            self.state = 66
            self.match(self.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamSetLeftContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(pbrtParser.STRING, 0)

        def getRuleIndex(self):
            return pbrtParser.RULE_paramSetLeft

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, pbrtListener ):
                listener.enterParamSetLeft(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, pbrtListener ):
                listener.exitParamSetLeft(self)




    def paramSetLeft(self):

        localctx = pbrtParser.ParamSetLeftContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_paramSetLeft)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(self.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamSetContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(pbrtParser.STRING)
            else:
                return self.getToken(pbrtParser.STRING, i)

        def paramSetLeft(self):
            return self.getTypedRuleContext(pbrtParser.ParamSetLeftContext,0)


        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(pbrtParser.NUMBER)
            else:
                return self.getToken(pbrtParser.NUMBER, i)

        def getRuleIndex(self):
            return pbrtParser.RULE_paramSet

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, pbrtListener ):
                listener.enterParamSet(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, pbrtListener ):
                listener.exitParamSet(self)




    def paramSet(self):

        localctx = pbrtParser.ParamSetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_paramSet)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70 
            self.paramSetLeft()
            self.state = 86
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 71
                self.match(self.STRING)
                pass

            elif la_ == 2:
                self.state = 72
                self.match(self.PARAMSET_ITEM_LIST_START)
                self.state = 74 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 73
                    self.match(self.NUMBER)
                    self.state = 76 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==pbrtParser.NUMBER):
                        break

                self.state = 78
                self.match(self.PARAMSET_ITEM_LIST_END)
                pass

            elif la_ == 3:
                self.state = 79
                self.match(self.PARAMSET_ITEM_LIST_START)
                self.state = 81 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 80
                    self.match(self.STRING)
                    self.state = 83 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==pbrtParser.STRING):
                        break

                self.state = 85
                self.match(self.PARAMSET_ITEM_LIST_END)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FilmContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramSet(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pbrtParser.ParamSetContext)
            else:
                return self.getTypedRuleContext(pbrtParser.ParamSetContext,i)


        def FILM(self):
            return self.getToken(pbrtParser.FILM, 0)

        def STRING(self):
            return self.getToken(pbrtParser.STRING, 0)

        def getRuleIndex(self):
            return pbrtParser.RULE_film

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, pbrtListener ):
                listener.enterFilm(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, pbrtListener ):
                listener.exitFilm(self)




    def film(self):

        localctx = pbrtParser.FilmContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_film)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(self.FILM)
            self.state = 89
            self.match(self.STRING)
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==pbrtParser.STRING:
                self.state = 90 
                self.paramSet()
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RendererContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramSet(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pbrtParser.ParamSetContext)
            else:
                return self.getTypedRuleContext(pbrtParser.ParamSetContext,i)


        def RENDERER(self):
            return self.getToken(pbrtParser.RENDERER, 0)

        def STRING(self):
            return self.getToken(pbrtParser.STRING, 0)

        def getRuleIndex(self):
            return pbrtParser.RULE_renderer

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, pbrtListener ):
                listener.enterRenderer(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, pbrtListener ):
                listener.exitRenderer(self)




    def renderer(self):

        localctx = pbrtParser.RendererContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_renderer)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(self.RENDERER)
            self.state = 97
            self.match(self.STRING)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==pbrtParser.STRING:
                self.state = 98 
                self.paramSet()
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SamplerContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramSet(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pbrtParser.ParamSetContext)
            else:
                return self.getTypedRuleContext(pbrtParser.ParamSetContext,i)


        def SAMPLER(self):
            return self.getToken(pbrtParser.SAMPLER, 0)

        def STRING(self):
            return self.getToken(pbrtParser.STRING, 0)

        def getRuleIndex(self):
            return pbrtParser.RULE_sampler

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, pbrtListener ):
                listener.enterSampler(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, pbrtListener ):
                listener.exitSampler(self)




    def sampler(self):

        localctx = pbrtParser.SamplerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_sampler)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(self.SAMPLER)
            self.state = 105
            self.match(self.STRING)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==pbrtParser.STRING:
                self.state = 106 
                self.paramSet()
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PixelFilterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramSet(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pbrtParser.ParamSetContext)
            else:
                return self.getTypedRuleContext(pbrtParser.ParamSetContext,i)


        def STRING(self):
            return self.getToken(pbrtParser.STRING, 0)

        def PIXELFILTER(self):
            return self.getToken(pbrtParser.PIXELFILTER, 0)

        def getRuleIndex(self):
            return pbrtParser.RULE_pixelFilter

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, pbrtListener ):
                listener.enterPixelFilter(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, pbrtListener ):
                listener.exitPixelFilter(self)




    def pixelFilter(self):

        localctx = pbrtParser.PixelFilterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_pixelFilter)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(self.PIXELFILTER)
            self.state = 113
            self.match(self.STRING)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==pbrtParser.STRING:
                self.state = 114 
                self.paramSet()
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SurfaceIntegratorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramSet(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pbrtParser.ParamSetContext)
            else:
                return self.getTypedRuleContext(pbrtParser.ParamSetContext,i)


        def SURFACEINTEGRATOR(self):
            return self.getToken(pbrtParser.SURFACEINTEGRATOR, 0)

        def STRING(self):
            return self.getToken(pbrtParser.STRING, 0)

        def getRuleIndex(self):
            return pbrtParser.RULE_surfaceIntegrator

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, pbrtListener ):
                listener.enterSurfaceIntegrator(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, pbrtListener ):
                listener.exitSurfaceIntegrator(self)




    def surfaceIntegrator(self):

        localctx = pbrtParser.SurfaceIntegratorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_surfaceIntegrator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(self.SURFACEINTEGRATOR)
            self.state = 121
            self.match(self.STRING)
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==pbrtParser.STRING:
                self.state = 122 
                self.paramSet()
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CameraContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramSet(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pbrtParser.ParamSetContext)
            else:
                return self.getTypedRuleContext(pbrtParser.ParamSetContext,i)


        def CAMERA(self):
            return self.getToken(pbrtParser.CAMERA, 0)

        def STRING(self):
            return self.getToken(pbrtParser.STRING, 0)

        def getRuleIndex(self):
            return pbrtParser.RULE_camera

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, pbrtListener ):
                listener.enterCamera(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, pbrtListener ):
                listener.exitCamera(self)




    def camera(self):

        localctx = pbrtParser.CameraContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_camera)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(self.CAMERA)
            self.state = 129
            self.match(self.STRING)
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==pbrtParser.STRING:
                self.state = 130 
                self.paramSet()
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LookAtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LOOKAT(self):
            return self.getToken(pbrtParser.LOOKAT, 0)

        def vector3(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pbrtParser.Vector3Context)
            else:
                return self.getTypedRuleContext(pbrtParser.Vector3Context,i)


        def getRuleIndex(self):
            return pbrtParser.RULE_lookAt

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, pbrtListener ):
                listener.enterLookAt(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, pbrtListener ):
                listener.exitLookAt(self)




    def lookAt(self):

        localctx = pbrtParser.LookAtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_lookAt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(self.LOOKAT)
            self.state = 137 
            self.vector3()
            self.state = 138 
            self.vector3()
            self.state = 139 
            self.vector3()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(pbrtParser.EOF, 0)

        def body(self):
            return self.getTypedRuleContext(pbrtParser.BodyContext,0)


        def getRuleIndex(self):
            return pbrtParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, pbrtListener ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, pbrtListener ):
                listener.exitProgram(self)




    def program(self):

        localctx = pbrtParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141 
            self.body()
            self.state = 142
            self.match(self.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def film(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pbrtParser.FilmContext)
            else:
                return self.getTypedRuleContext(pbrtParser.FilmContext,i)


        def sampler(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pbrtParser.SamplerContext)
            else:
                return self.getTypedRuleContext(pbrtParser.SamplerContext,i)


        def concattransform(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pbrtParser.ConcattransformContext)
            else:
                return self.getTypedRuleContext(pbrtParser.ConcattransformContext,i)


        def scale(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pbrtParser.ScaleContext)
            else:
                return self.getTypedRuleContext(pbrtParser.ScaleContext,i)


        def transformBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pbrtParser.TransformBlockContext)
            else:
                return self.getTypedRuleContext(pbrtParser.TransformBlockContext,i)


        def surfaceIntegrator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pbrtParser.SurfaceIntegratorContext)
            else:
                return self.getTypedRuleContext(pbrtParser.SurfaceIntegratorContext,i)


        def worldBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pbrtParser.WorldBlockContext)
            else:
                return self.getTypedRuleContext(pbrtParser.WorldBlockContext,i)


        def renderer(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pbrtParser.RendererContext)
            else:
                return self.getTypedRuleContext(pbrtParser.RendererContext,i)


        def pixelFilter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pbrtParser.PixelFilterContext)
            else:
                return self.getTypedRuleContext(pbrtParser.PixelFilterContext,i)


        def lookAt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pbrtParser.LookAtContext)
            else:
                return self.getTypedRuleContext(pbrtParser.LookAtContext,i)


        def camera(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pbrtParser.CameraContext)
            else:
                return self.getTypedRuleContext(pbrtParser.CameraContext,i)


        def translate(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pbrtParser.TranslateContext)
            else:
                return self.getTypedRuleContext(pbrtParser.TranslateContext,i)


        def accelerator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pbrtParser.AcceleratorContext)
            else:
                return self.getTypedRuleContext(pbrtParser.AcceleratorContext,i)


        def getRuleIndex(self):
            return pbrtParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, pbrtListener ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, pbrtListener ):
                listener.exitBody(self)




    def body(self):

        localctx = pbrtParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 157
                token = self._input.LA(1)
                if token in [self.ACCELERATOR]:
                    self.state = 144 
                    self.accelerator()

                elif token in [self.TRANSFORMBEGIN]:
                    self.state = 145 
                    self.transformBlock()

                elif token in [self.TRANSLATE]:
                    self.state = 146 
                    self.translate()

                elif token in [self.CONCATTRANSFORM, self.PARAMSET_ITEM_LIST_START]:
                    self.state = 147 
                    self.concattransform()

                elif token in [self.SCALE]:
                    self.state = 148 
                    self.scale()

                elif token in [self.FILM]:
                    self.state = 149 
                    self.film()

                elif token in [self.RENDERER]:
                    self.state = 150 
                    self.renderer()

                elif token in [self.SAMPLER]:
                    self.state = 151 
                    self.sampler()

                elif token in [self.PIXELFILTER]:
                    self.state = 152 
                    self.pixelFilter()

                elif token in [self.SURFACEINTEGRATOR]:
                    self.state = 153 
                    self.surfaceIntegrator()

                elif token in [self.CAMERA]:
                    self.state = 154 
                    self.camera()

                elif token in [self.LOOKAT]:
                    self.state = 155 
                    self.lookAt()

                elif token in [self.WORLDBEGIN]:
                    self.state = 156 
                    self.worldBlock()

                else:
                    raise NoViableAltException(self)

                self.state = 159 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << self.ACCELERATOR) | (1 << self.CAMERA) | (1 << self.CONCATTRANSFORM) | (1 << self.FILM) | (1 << self.LOOKAT) | (1 << self.PIXELFILTER) | (1 << self.RENDERER) | (1 << self.SAMPLER) | (1 << self.SCALE) | (1 << self.SURFACEINTEGRATOR) | (1 << self.TRANSFORMBEGIN) | (1 << self.TRANSLATE) | (1 << self.WORLDBEGIN) | (1 << self.PARAMSET_ITEM_LIST_START))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WorldBlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def objectBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pbrtParser.ObjectBlockContext)
            else:
                return self.getTypedRuleContext(pbrtParser.ObjectBlockContext,i)


        def transform(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pbrtParser.TransformContext)
            else:
                return self.getTypedRuleContext(pbrtParser.TransformContext,i)


        def WORLDBEGIN(self):
            return self.getToken(pbrtParser.WORLDBEGIN, 0)

        def transformBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pbrtParser.TransformBlockContext)
            else:
                return self.getTypedRuleContext(pbrtParser.TransformBlockContext,i)


        def namedmaterial(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pbrtParser.NamedmaterialContext)
            else:
                return self.getTypedRuleContext(pbrtParser.NamedmaterialContext,i)


        def texture(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pbrtParser.TextureContext)
            else:
                return self.getTypedRuleContext(pbrtParser.TextureContext,i)


        def shape(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pbrtParser.ShapeContext)
            else:
                return self.getTypedRuleContext(pbrtParser.ShapeContext,i)


        def objectInstance(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pbrtParser.ObjectInstanceContext)
            else:
                return self.getTypedRuleContext(pbrtParser.ObjectInstanceContext,i)


        def WORLDEND(self):
            return self.getToken(pbrtParser.WORLDEND, 0)

        def material(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pbrtParser.MaterialContext)
            else:
                return self.getTypedRuleContext(pbrtParser.MaterialContext,i)


        def makenamedmaterial(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pbrtParser.MakenamedmaterialContext)
            else:
